Added image, icons, and styled with colors

--- a/index.html
+++ b/index.html
@@ -26,33 +26,89 @@
             <li><a href="finance.html">Finance</a></li>
             <li><a href="together.html">Together</a></li>
             <li><a href="contact.html">Contact</a></li>
+            <!-- <li><a href="Overview.html">Overview</a></li>  -->
+            <!-- jeg vuderer om jeg legger en overview på startsiden senere -->
         </ul>
     </nav>
 
+    <figure class = "image">
+        <img src="bilder/pixabay/students-pixabayCom.webp" alt="students-pixabayCom">
+
+        <!-- Husk også å ha en fallback for eldre nettlesere som ikke støtter WebP. Du kan oppnå dette ved å inkludere den samme bildet, men i et annet format (for eksempel JPEG eller PNG), og angi det som en kilde ved hjelp av srcset-attributtet. Her er et eksempel: -->
+        <!-- <img src="bilde.webp" alt="" srcset="bilde.jpg"> -->
+        <!-- <figcaption>Image by coffeebeanworks from Pixabay (https://pixabay.com/illustrations/avatar-clients-icons-customers-2191932/)</figcaption> -->
+
+
+    </figure>
+
     <main class="site-content" id="content">
 
-        <section class="content-intro">
+        <!-- <section class="content-intro">
+        
             <h2>Welcome to StudentHub</h2>
             <p>Struggling with managing your academic life? StudentHub offers tools for task organization, financial management, and much more.</p>
-        </section>
+        </section> -->
 
         <section class="infoboxen">
             <h2>Features Overview</h2>
 
             <article class="infobox">
+
+                <figure class = "icon">
+                    <img src="bilder/icon/flaticonCom/task.svg" alt=" icon task">
+                </figure>
+                
+
                 <h3>Task Management</h3>
                 <p>Keep your assignments and deadlines in check with our intuitive task manager.</p>
+                <p><a href="tasks.html">Tasks</a></p>  
             </article>
 
             <article class="infobox">
+
+                <figure class = "icon">
+                    <img src="bilder/icon/flaticonCom/budget.svg" alt=" icon task">
+                </figure>
                 <h3>Financial Planner</h3>
                 <p>Manage your budget and track expenses effortlessly.</p>
+                <p><a href="finance.html">Finance</a></p>
             </article>
 
             <article class="infobox">
+                <figure class = "icon">
+                    <img src="bilder/icon/flaticonCom/community2.svg" alt=" icon task">
+                </figure>
+ 
                 <h3>Together</h3>
                 <p>Join study groups. </p>
+                <p><a href="together.html">Together</a></p>
             </article>
+
+            <article class="infobox">
+                <figure class = "icon">
+                    <img src="bilder/icon/flaticonCom/support.svg" alt=" icon task">
+                </figure>
+
+                <h3>Contact</h3>
+                <p>We'd Love to Hear From You!</p>
+                <p><a href="contact.html">Contact</a></p>
+            </article>
+
+        </section>
+
+        <section class="overview">
+            <h2>Update Update...</h2>
+            <p>...om jeg får tid - eventuell lage en oversikt her.... through StudentHub.</p>
+
+            <div class="update">
+                <p>"Joining study groups on StudentHub helped me ace my exams!"</p>
+                <!-- <cite>&mdash; Sam</cite> -->
+            </div>
+
+            <div class="update">
+                <p>"I've made lifelong friends through the community features. Highly recommend!"</p>
+                <!-- <cite>&mdash; Alex</cite>
+            </div> -->
 
         </section>
     </main>
