Added styling: shadow and border-radius for rounded corners, began styling hyperlinks as buttons (not finished), refined color scheme, and organized stylesheets

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </section> -->
 
         <section class="infoboxen">
-            <h2>Features Overview</h2>
+            <h2 class="visually-hidden">Features Overview</h2>
 
             <article class="infobox">
 
@@ -101,16 +101,23 @@
             <p>...om jeg får tid - eventuell lage en oversikt her.... through StudentHub.</p>
 
             <div class="update">
-                <p>"Joining study groups on StudentHub helped me ace my exams!"</p>
+                <p>"..du har brukt opp ditt budget for denne uken .. eller noe....</p>
                 <!-- <cite>&mdash; Sam</cite> -->
             </div>
 
             <div class="update">
-                <p>"I've made lifelong friends through the community features. Highly recommend!"</p>
+                <p>...følgende oppgaver må gjøres....eller noe....</p>
                 <!-- <cite>&mdash; Alex</cite>
             </div> -->
 
         </section>
+
+        <!-- gjøre om til noe slags button? :  -->
+
+        <button><figure class = "icon">
+            <img src="bilder/icon/flaticonCom/support.svg" alt=" icon task">
+        </figure></button>
+
     </main>
 
                 <footer class="site-footer">
