--- a/together.html
+++ b/together.html
@@ -34,7 +34,7 @@
         </section>
 
         <section class="student-testimonials">
-            <h2>What Students Say</h2>
+            <h2>Slette her? </h2>
             <p>Real stories from students who have found their community through StudentHub.</p>
 
             <div class="testimonial">
