--- a/contact.html
+++ b/contact.html
@@ -25,11 +25,15 @@
             </ul>
         </nav>
 
+        <figure class = "image">
+            <img src="bilder/pixabay/students-pixabayCom.webp" alt="students-pixabayCom">
+
         <main class="site-content" id="content">
 
             <section class="content-intro">
-                <h2>We'd Love to Hear From You</h2>
+                <h2>We'd Love to Hear From You!</h2>
                 <p>Whether you have a question about features, trials, pricing, need a demo, or anything else, our team is ready to answer all your questions.</p>
+                <p>....sette in en sideseksjon med nyttige lenker for studiestartere? læring, veiledning... </p>
             </section>
 
             <section class="contact-form">
