--- a/community.html
+++ b/community.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" id="top">
+<html lang="en" id="top" class="no-js">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,21 +7,41 @@
     <meta name="description" content="Explore the social integration aspect of StudentHub, where students can connect, share, and grow together.">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/together.css" rel="stylesheet">
+    <script>
+        document.documentElement.classList.remove('no-js'); 
+        document.documentElement.classList.add('js');
+    </script>
 </head>
-<body>
+<body class="home">
     <header class="site-header">
-        <h1>StudentHub</h1>
-        <p>Your Ultimate Companion for Student Life</p>
+        <div class="wrapper">
+            <div class="logo-container">
+                <img src="bilder/logo/iconfinderCom/SVG.svg"  
+                     srcset="bilder/logo/iconfinderCom/SVG.svg 2x"
+                     alt=""
+                     width="222"
+                     height="36">
+            </div>
+            <div class="text-container">
+                <h1 class="site-logo">StudentHub</h1>
+                <p class="site-slogan">Your Ultimate Companion for Student Life</p>
+            </div>
+        </div>
     </header>
+
     <nav class="site-nav">
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="tasks.html">Tasks</a></li>
-            <li><a href="finance.html">Finance</a></li>
-            <li><a href="together.html" class="current">Together</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
+        <button class="menubutton">Menu</button>
+        <div class="inside">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="tasks.html">Tasks</a></li>
+                <li><a href="finance.html">Finance</a></li>
+                <li><a href="community.html" class="current">Community</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </div>
     </nav>
+
     <main class="site-content" id="content">
         <section class="social-integration">
             <h2>Connect, Share, and Grow Together</h2>
@@ -32,28 +52,10 @@
                 <!-- Placeholder image or text indicating where the slider will be -->
             </div>
         </section>
-
-        <section class="student-testimonials">
-            <h2>Slette her? </h2>
-            <p>Real stories from students who have found their community through StudentHub.</p>
-
-            <div class="testimonial">
-                <p>"Joining study groups on StudentHub helped me ace my exams!"</p>
-                <cite>&mdash; Sam</cite>
-            </div>
-
-            <div class="testimonial">
-                <p>"I've made lifelong friends through the community features. Highly recommend!"</p>
-                <cite>&mdash; Alex</cite>
-            </div>
-
-        </section>
-
     </main>
 
     <footer class="site-footer">
         <a href="#top">Back to Top</a>
     </footer>
-    
 </body>
 </html>
