Added login and registration forms

--- a/finance.html
+++ b/finance.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en" id="top">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StudentHub - Financial Planner</title>
-    <meta name="description" content="Manage your finances with ease using StudentHub's Financial Planner. Budgeting, expense tracking, and financial goal setting all in one place.">
+    <meta name="description"
+        content="Manage your finances with ease using StudentHub's Financial Planner. Budgeting, expense tracking, and financial goal setting all in one place.">
     <link href="css/style.css" rel="stylesheet">
 </head>
+
 <body>
     <header class="site-header">
         <h1>StudentHub</h1>
@@ -19,12 +22,15 @@
             <li><a href="finance.html" class="current">Finance</a></li>
             <li><a href="together.html">Together</a></li>
             <li><a href="contact.html">Contact</a></li>
+            <!--TODO  Hier is de uitloglink. Je moet "/logout" vervangen door het daadwerkelijke adres van je server-side uitlogroute zodra je die hebt. -->
+            <li><a href="/logout">Logout</a></li>
         </ul>
     </nav>
     <main class="site-content" id="content">
         <section class="financial-intro">
             <h2>Financial Planner</h2>
-            <p>Welcome to your financial planner. Track your expenses, manage your budget, and achieve your financial goals with our comprehensive tool.</p>
+            <p>Welcome to your financial planner. Track your expenses, manage your budget, and achieve your financial
+                goals with our comprehensive tool.</p>
         </section>
         <!-- Large Placeholder Area for Financial Planner Code -->
         <section class="financial-planner-placeholder">
@@ -38,4 +44,5 @@
         <a href="#top">Back to Top</a>
     </footer>
 </body>
+
 </html>
