--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
-
 <!DOCTYPE html>
 <html lang="en" id="top">
+
 <head>
 
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <title>StudentHub - Your All-in-One Student Organizer</title>
-        <meta name="description" content="StudentHub is an all-in-one app that helps students manage their daily life, organize tasks, manage finances, and much more.">
+    <title>StudentHub - Your All-in-One Student Organizer</title>
+    <meta name="description"
+        content="StudentHub is an all-in-one app that helps students manage their daily life, organize tasks, manage finances, and much more.">
 
-        <link href="css/style.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 
- </head>
+</head>
 
 
 <body>
@@ -26,6 +27,8 @@
             <li><a href="finance.html">Finance</a></li>
             <li><a href="together.html">Together</a></li>
             <li><a href="contact.html">Contact</a></li>
+            <!-- TODO  Hier is de uitloglink. Je moet "/logout" vervangen door het daadwerkelijke adres van je server-side uitlogroute zodra je die hebt. -->
+            <li><a href="/logout">Logout</a></li>
         </ul>
     </nav>
 
@@ -33,7 +36,8 @@
 
         <section class="content-intro">
             <h2>Welcome to StudentHub</h2>
-            <p>Struggling with managing your academic life? StudentHub offers tools for task organization, financial management, and much more.</p>
+            <p>Struggling with managing your academic life? StudentHub offers tools for task organization, financial
+                management, and much more.</p>
         </section>
 
         <section class="infoboxen">
@@ -57,10 +61,9 @@
         </section>
     </main>
 
-                <footer class="site-footer">
-                    <a href="#top">Back to Top</a>
-                </footer>
+    <footer class="site-footer">
+        <a href="#top">Back to Top</a>
+    </footer>
 </body>
-    
+
 </html>
-            
