--- a/tasks.html
+++ b/tasks.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en" id="top">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tasks - StudentHub</title>
-    <meta name="description" content="Manage your tasks efficiently with StudentHub's Task Manager. Stay on top of your assignments and deadlines with ease.">
+    <meta name="description"
+        content="Manage your tasks efficiently with StudentHub's Task Manager. Stay on top of your assignments and deadlines with ease.">
     <link href="css/style.css" rel="stylesheet">
     <style>
         .task-list-item {
@@ -13,12 +15,14 @@
             align-items: center;
             padding: 10px 0;
         }
+
         .task-list-item .buttons {
             display: flex;
             gap: 10px;
         }
     </style>
 </head>
+
 <body>
     <header class="site-header">
         <h1>StudentHub</h1>
@@ -31,12 +35,15 @@
             <li><a href="finance.html">Finance</a></li>
             <li><a href="together.html">Together</a></li>
             <li><a href="contact.html">Contact</a></li>
+            <!-- TODO  Hier is de uitloglink. Je moet "/logout" vervangen door het daadwerkelijke adres van je server-side uitlogroute zodra je die hebt. -->
+            <li><a href="/logout">Logout</a></li>
         </ul>
     </nav>
     <main class="site-content" id="content">
         <section class="task-manager-intro">
             <h2>Task Manager</h2>
-            <p>Welcome to your personal task manager. Organize your assignments, keep track of deadlines, and manage your academic tasks efficiently.</p>
+            <p>Welcome to your personal task manager. Organize your assignments, keep track of deadlines, and manage
+                your academic tasks efficiently.</p>
         </section>
         <div class="container">
             <h1>Task Manager</h1>
@@ -45,7 +52,7 @@
                 <input type="date" id="dueDate">
             </div>
             <button onclick="addTask()">Add Task</button>
-            
+
             <!-- Advanced Settings section -->
             <button onclick="toggleAdvancedSettings()">Advanced Settings</button>
             <div id="advancedSettings" style="display: none;">
@@ -102,7 +109,7 @@
 
                 deleteButton.textContent = 'Delete';
                 deleteButton.className = 'delete-btn';
-                deleteButton.onclick = function() {
+                deleteButton.onclick = function () {
                     if (confirm('Are you sure you want to delete this task?')) {
                         taskList.removeChild(li);
                     }
@@ -110,7 +117,7 @@
 
                 finishButton.textContent = 'Finish';
                 finishButton.className = 'finish-btn';
-                finishButton.onclick = function() {
+                finishButton.onclick = function () {
                     taskList.removeChild(li);
                 };
 
@@ -135,7 +142,7 @@
         // Function to update timers for all tasks
         function updateTimers() {
             var tasks = document.querySelectorAll('#taskList li');
-            tasks.forEach(function(task) {
+            tasks.forEach(function (task) {
                 var dueDateStr = task.textContent.match(/Due: (\d{4}-\d{2}-\d{2})/);
                 if (dueDateStr) {
                     var dueDate = new Date(dueDateStr[1] + 'T23:59:59');
@@ -164,4 +171,5 @@
         }
     </script>
 </body>
+
 </html>
