--- a/together.html
+++ b/together.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en" id="top">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StudentHub - Together</title>
-    <meta name="description" content="Explore the social integration aspect of StudentHub, where students can connect, share, and grow together.">
+    <meta name="description"
+        content="Explore the social integration aspect of StudentHub, where students can connect, share, and grow together.">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/together.css" rel="stylesheet">
 </head>
+
 <body>
     <header class="site-header">
         <h1>StudentHub</h1>
@@ -20,6 +23,8 @@
             <li><a href="finance.html">Finance</a></li>
             <li><a href="together.html" class="current">Together</a></li>
             <li><a href="contact.html">Contact</a></li>
+            <!-- TODO  Hier is de uitloglink. Je moet "/logout" vervangen door het daadwerkelijke adres van je server-side uitlogroute zodra je die hebt. -->
+            <li><a href="/logout">Logout</a></li>
         </ul>
     </nav>
     <main class="site-content" id="content">
@@ -27,7 +32,8 @@
             <h2>Connect, Share, and Grow Together</h2>
             <p>Discover new friendships and study groups within our vibrant student community.</p>
             <!-- Image Slider Placeholder -->
-            <div class="image-slider-placeholder" style="max-width: 800px; margin: auto; padding: 20px; border: 2px dashed #ccc; text-align: center;">
+            <div class="image-slider-placeholder"
+                style="max-width: 800px; margin: auto; padding: 20px; border: 2px dashed #ccc; text-align: center;">
                 <h3>Picture Slide Coming Soon</h3>
                 <!-- Placeholder image or text indicating where the slider will be -->
             </div>
@@ -54,6 +60,7 @@
     <footer class="site-footer">
         <a href="#top">Back to Top</a>
     </footer>
-    
+
 </body>
+
 </html>
