update link size: "register here"

--- a/login.html
+++ b/login.html
@@ -11,7 +11,8 @@
     <div class="login-container">
         <h2>Login</h2>
 
-        <form action="/login" method="POST" id="login-form"> <!-- TODO Implement the server-side logic for the login form -->
+        <form action="/login" method="POST" id="login-form">
+            <!-- TODO Implement the server-side logic for the login form -->
             <label for="username">Username</label>
             <input type="text" id="username" name="username" required>
 
@@ -31,7 +32,7 @@
         <p><a href="/forgotPassword.html">Forgot Password?</a></p>
 
         <!-- Link to the registration page -->
-        <p>Don't have an account? <a href="/register.html">Register here</a>.</p>
+        <p class="registration-prompt">Don't have an account? <a href="/register.html">Register here</a>.</p>
     </div>
 </body>
 
