--- a/WebAppStudentHub-master/tasks.html
+++ b/WebAppStudentHub-master/tasks.html
@@ -7,65 +7,144 @@
     <meta name="description" content="Manage your tasks efficiently with StudentHub's Task Manager. Stay on top of your assignments and deadlines with ease.">
     <link href="css/style.css" rel="stylesheet">
     <style>
+        .task-list {
+            list-style-type: none;
+            padding: 0;
+            margin-bottom: 30 px;
+        }
+        .site-footer {
+            margin-bottom: 0 px;
+        }
         .task-list-item {
             display: flex;
             justify-content: space-between;
             align-items: center;
             padding: 10px 0;
+            border-bottom: 1px solid #ccc;
+        }
+        .task-list-item:last-child {
+            border-bottom: none; /* Remove border for last item */
         }
         .task-list-item .buttons {
             display: flex;
             gap: 10px;
         }
-    </style>
-</head>
-<body>
-    <header class="site-header">
-        <h1>StudentHub</h1>
-        <p>Your Ultimate Companion for Student Life</p>
-    </header>
-    <nav class="site-nav">
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="tasks.html" class="current">Tasks</a></li>
-            <li><a href="finance.html">Finance</a></li>
-            <li><a href="together.html">Together</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
+        .container {
+        width: 100%;
+        max-width: 870px;
+        margin: 0 auto;
+        text-align: center;
+        padding: 20px;
+        background-color: #e7e7e7; /* Light grey background color */
+        border-radius: 10px; /* Rounded corners */
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); /* Shadow */
+        transition: max-width 0.5s ease; /* Smooth transition for max-width change */
+        }
+        .task-manager-intro {
+            padding: 0 40px;
+        }
+        .empty-message {
+            color: #888;
+            margin-top: 10px;
+        }
+        .site-content {
+            max-width: 950px;
+            margin: 0 auto;
+        }
+        .finish-btn {
+            background-color: green;
+            color: white;
+            border: none;
+            padding: 8px 16px;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+        .finish-btn:hover {
+            background-color: darkgreen;
+        }
+        .delete-btn {
+            background-color: red;
+            color: white;
+            border: none;
+            padding: 8px 16px;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+        .delete-btn:hover {
+            background-color: darkred;
+        }
+        .task-manager-intro {
+        padding: 0 40px;
+        }
+
+        .intro-container {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .intro-text {
+            flex: 1;
+        }
+
+        .intro-image {
+            flex: 1;
+            text-align: center;
+        }
+
+        .intro-image img {
+            max-width: 100%;
+            height: auto;
+        }
+
+            </style>
+        </head>
+        <body>
+            <header class="site-header">
+                <h1>StudentHub</h1>
+                <p>Your Ultimate Companion for Student Life</p>
+            </header>
+              <nav class="site-nav">
+                <div class="inside">
+
+                    <button class="menubutton" onclick="this.classList.toggle('showmenu')">Menü</button>
+
+            <ul>
+                <li><a href="index.html" class="current">Home</a></li>
+                <li><a href="tasks.html">Tasks</a></li>
+                <li><a href="finance.html">Finance</a></li>
+                <li><a href="community.html">Community</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </div>
     </nav>
     <main class="site-content" id="content">
         <section class="task-manager-intro">
+    <div class="intro-container">
+        <div class="intro-text">
             <h2>Task Manager</h2>
             <p>Welcome to your personal task manager. Organize your assignments, keep track of deadlines, and manage your academic tasks efficiently.</p>
-        </section>
+        </div>
+        <div class="intro-image">
+            <img src="bilder/TasksBilder/Task list.png" alt="Task List Image">
+        </div>
+    </div>
+</section>
+
         <div class="container">
-            <h1>Task Manager</h1>
+            <h2>Add tasks here</h2>
             <div>
                 <input type="text" id="taskInput" placeholder="Add new task...">
                 <input type="date" id="dueDate">
             </div>
             <button onclick="addTask()">Add Task</button>
-            
-            <!-- Advanced Settings section -->
-            <button onclick="toggleAdvancedSettings()">Advanced Settings</button>
-            <div id="advancedSettings" style="display: none;">
-                <label for="startTime">Start Time:</label>
-                <input type="time" id="startTime" name="startTime" class="time-input">
-                <br>
-                <label for="endTime">End Time:</label>
-                <input type="time" id="endTime" name="endTime" class="time-input">
-                <br>
-                <label for="repeatFrequency">Repeat:</label>
-                <select id="repeatFrequency">
-                    <option value="none">No repeat</option>
-                    <option value="daily">Repeat every day</option>
-                    <option value="weekly">Repeat every week</option>
-                    <option value="monthly">Repeat every month</option>
-                </select>
-            </div>
-
-            <!-- Task list -->
-            <ul id="taskList"></ul>
+            <!-- Active Tasks -->
+            <h2>Active Tasks</h2>
+            <ul id="taskList" class="task-list">
+                <li class="empty-message" id="activeEmptyMessage">No active tasks</li>
+            </ul>
         </div>
     </main>
     <footer class="site-footer">
@@ -73,20 +152,10 @@
     </footer>
 
     <script>
-        function toggleAdvancedSettings() {
-            var advancedSettingsDiv = document.getElementById('advancedSettings');
-            if (advancedSettingsDiv.style.display === 'none') {
-                advancedSettingsDiv.style.display = 'block';
-            } else {
-                advancedSettingsDiv.style.display = 'none';
-            }
-        }
-
         // Function to add a new task
         function addTask() {
             var taskInput = document.getElementById('taskInput').value;
             var dueDate = document.getElementById('dueDate').value;
-            var repeatFrequency = document.getElementById('repeatFrequency').value;
             var taskList = document.getElementById('taskList');
 
             if (taskInput !== '') {
@@ -104,14 +173,15 @@
                 deleteButton.className = 'delete-btn';
                 deleteButton.onclick = function() {
                     if (confirm('Are you sure you want to delete this task?')) {
-                        taskList.removeChild(li);
+                        deleteTask(li); // Call delete task function
                     }
                 };
 
                 finishButton.textContent = 'Finish';
                 finishButton.className = 'finish-btn';
                 finishButton.onclick = function() {
-                    taskList.removeChild(li);
+                    deleteTask(li); // Call delete task function
+                    moveToArchive(li); // Move finished task to the archive
                 };
 
                 buttonsDiv.appendChild(deleteButton);
@@ -129,6 +199,45 @@
                 // Update timer every second
                 updateTimers();
                 setInterval(updateTimers, 1000);
+
+                // Hide the empty message for active tasks
+                document.getElementById('activeEmptyMessage').style.display = 'none';
+
+                // Hide or show the task list container based on whether there are active tasks
+                updateTaskListVisibility();
+                }
+            }
+
+
+        // Function to delete a task
+        function deleteTask(taskItem) {
+            taskItem.parentNode.removeChild(taskItem);
+            updateEmptyMessage('active'); // Update empty message
+
+            // Hide or show the task list container based on whether there are active tasks
+            updateTaskListVisibility();
+            }
+
+            // Function to update empty message for active list
+            function updateEmptyMessage(listType) {
+                var emptyMessage = document.getElementById(listType + 'EmptyMessage');
+                var taskList = document.getElementById('taskList');
+                if (taskList.children.length > 1) { // If there are tasks other than the empty message
+                    emptyMessage.style.display = 'none'; // Hide empty message
+                } else {
+                    emptyMessage.style.display = 'block'; // Show empty message
+                }
+            }
+
+        // Function to update task list visibility based on whether there are active tasks
+                function updateTaskListVisibility() {
+            var taskListContainer = document.getElementById('taskListContainer');
+            var taskList = document.getElementById('taskList');
+
+            if (taskList.children.length > 1) { // If there are tasks other than the empty message
+                taskListContainer.style.display = 'block'; // Show task list container
+            } else {
+                taskListContainer.style.display = 'none'; // Hide task list container
             }
         }
 
