--- a/login.html
+++ b/login.html
@@ -30,9 +30,11 @@
 
         <!-- Link to the forgot password page -->
         <p><a href="/forgotPassword.html">Forgot Password?</a></p>
+        
+        <br> <!-- Line break -->
 
         <!-- Link to the registration page -->
-        <p class="registration-prompt">Don't have an account? <a href="/register.html">Register here</a>.</p>
+        <p class="registration-prompt">Don't have an account? <a href="/register.html"> Sign up here</a>.</p>
     </div>
 </body>
 
