--- a/forgotPassword.html
+++ b/forgotPassword.html
@@ -9,7 +9,7 @@
     <div class="login-container">
         <h2>Forgot Password</h2>
         <form action="/forgot-password" method="POST" id="forgot-password-form">
-            <label for="email">Email</label>
+            <label for="email">Email:</label>
             <input type="email" id="email" name="email" required>
            <!--TODO Implement the server-side logic for the forgot password form -->
             <button type="submit">Submit</button> 
