--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,10 @@
         <meta name="description" content="Get in touch with the StudentHub team for any questions, feedback, or support requests you may have. We're here to help you make the most of your student life.">
         <link href="css/style.css" rel="stylesheet">
         <link href="css/contact.css" rel="stylesheet">
+
+        <link rel="stylesheet"  href="style.css" >
+        <link rel="stylesheet"  href="contact.css" >
+        <link href="css/style.css" rel="stylesheet">
     </head>
 
     <body>
@@ -52,7 +56,7 @@
             <section class="contact-form">
                 <h2>Send Message</h2>
                 
-                <form id="contactForm">
+                <form id="contactForm" method="post" action="/">
 
                     <div>
                         <label for="name">Your Name:</label><br>
@@ -79,5 +83,6 @@
         <footer class="site-footer">
             <a href="#top">Back to Top</a>
         </footer>
+        
     </body>
 </html>
