--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
         <section class="content-intro">
           <div class="inside">
-            <h2>Chart your daily journey, one step closer to success! </h2>
+            <h2>Struggling with managing your academic life? </h2>
   
             <p> <img src="bilder/pixabay/studentHubPNG.png"
               alt=""
@@ -117,9 +117,9 @@
                 </figure>
                 
 
-                <h3>Task Management</h3>
-                <p>Studies show that organized students achieve up to 50% more.</p>
-                <p><a href="tasks.html">Tasks</a></p>  
+                <h3>Maximize Your Potential</h3>
+                <p>Studies show that organized students achieve up to 50% more. Boost your productivity by mastering task management techniques.</p>
+                <p><a href="tasks.html">Explore tips</a></p>  
             </article>
 
             <article class="infobox">
@@ -127,9 +127,9 @@
                 <figure class = "icon">
                     <img src="bilder/icon/flaticonCom/budget.svg" alt=" icon task">
                 </figure>
-                <h3>Financial Planner</h3>
-                <p>Manage finances smarter with a planner that adapts to you.</p>
-                <p><a href="finance.html">Finance</a></p>
+                <h3>Budgeting Basics</h3>
+                <p>Learn how to effectively manage your finances and budget wisely. Manage finances smarter with a planner that adapts to you.</p>
+                <p><a href="finance.html">Read more</a></p>
             </article>
 
             <article class="infobox">
@@ -137,9 +137,9 @@
                     <img src="bilder/icon/flaticonCom/community2.svg" alt=" icon task">
                 </figure>
  
-                <h3>Community</h3>
-                <p>Join our Community platform to connect, collaborate, and succeed.</p>
-                <p><a href="community.html">Community</a></p>
+                <h3>Strength in Numbers</h3>
+                <p>Studies show that a sense of community significantly enhances student well-being and academic success. Join our Community platform to connect, collaborate, and succeed.</p>
+                <p><a href="community.html">Discover more</a></p>
             </article>
 
             <!-- <article class="infobox">
@@ -158,7 +158,7 @@
 
         <section class="updateboxen">
             <div class="inside">
-                <h2> Struggling with managing your academic life?           
+                <h2>Chart your daily journey, one step closer to success!            
                 </h2>
 
                 
