Changed text on the pages

--- a/dashboard.html
+++ b/dashboard.html
@@ -98,10 +98,10 @@
 
           <p>Ready to make today productive? Your personalized dashboard brings all your essential student tools into focus.</p>
           <p>Designed to adapt to your unique needs, helping you stay on top of your academic and social life effortlessly.</p>
-          <p>Explore the dashboard below to seamlessly manage your schedule, track your progress, and connect with your campus community</p>
+          <p> Get inspired every day as you take control and shape your student journey!</p>
         </section>
  
-          
+      
 
 
 
