--- a/tasks.html
+++ b/tasks.html
@@ -81,7 +81,7 @@
 
         <section class="content-intro float-umschliessen">
 
-          <h2>Task overskrift  overskrift </h2>
+          <h2>Task manager</h2>
           
 
           <figure class="float-rechts">
@@ -95,9 +95,9 @@
 
             
 
-          <p>passende tekst for task og passende icon...... </p>
-          <p>Designed to adapt to your unique needs, helping you stay on top of your academic and social life effortlessly.</p>
-          <p>Explore the dashboard below to seamlessly manage your schedule, track your progress, and connect with your campus community</p>
+          <p>Our task manager is designed just for students like you. </p>
+          <p>Easily add, track, and manage your daily tasks to free up more time for the fun stuff. Whether it's meeting deadlines or planning your social life, we've got you covered. </p>
+          <p>Start simplifying your studies and enjoy stress-free organization today! </p>
         </section>
 
       </main>
