--- a/login.html
+++ b/login.html
@@ -1,3 +1,4 @@
+<!-- By Dirkje J van der Poel -->
 <!DOCTYPE html>
 <html>
 
@@ -10,6 +11,9 @@
 <body>
     <div class="login-container">
         <h2>Login</h2>
+
+        <!-- New div for displaying the logout message -->
+        <div id="logout-message"></div>
 
         <form action="/login" method="POST" id="login-form">
             <!-- TODO Implement the server-side logic for the login form -->
@@ -36,6 +40,22 @@
         <!-- Link to the registration page -->
         <p class="registration-prompt">Don't have an account? <a href="/register.html"> Sign up here</a>.</p>
     </div>
+
+    <!-- Include jQuery library -->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script>
+        $(document).ready(function() {
+            // Get the query parameters from the current URL
+            const urlParams = new URLSearchParams(window.location.search);
+            // Get the value of the 'logged_out' parameter
+            const loggedOut = urlParams.get('logged_out');
+
+            // If 'logged_out' is true, display the logout message
+            if (loggedOut) {
+                $('#logout-message').text('You have been logged out successfully.');
+            }
+        });
+    </script>
 </body>
 
 </html>
