--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
         <div class="inside">
             <nav class="footer-nav">
                 <ul>
-                    <li><a href="#">Legal Notice</a></li>
+                    <!-- <li><a href="#">Legal Notice</a></li> -->
                     <li><a href="#">Privacy Protection</a></li>
 
                     <li><a href="#top">Back to Top </a></li>
