litt forandring på landingside

--- a/contact.html
+++ b/contact.html
@@ -9,10 +9,14 @@
     <meta name="description" content="Get in touch with the StudentHub team for any questions, feedback, or support requests you may have. We're here to help you make the most of your student life.">
     <!-- <link href="css/style.css" rel="stylesheet">
     <link href="css/contact.css" rel="stylesheet"> -->
+
+    <link rel="stylesheet"  href="style.css" >
+    <link rel="stylesheet"  href="cssstyle.css" >
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
     <!-- by Dirkje J vd Poel -- dropdown-menu library -->
 
-    <link rel="stylesheet"  href="style.css" >
+   
+
     <!-- <link rel="stylesheet"  href="contact.css" > -->
     
 </head>
