--- a/tasks.html
+++ b/tasks.html
@@ -15,6 +15,9 @@
         content="StudentHub is an all-in-one app that helps students manage their daily life, organize tasks, handle finances, and enhance social integration, making it easier to connect and participate in community activities.">
 
     <link href="css/style.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
+    
+
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
 
     <!-- by Dirkje J vd Poel -- dropdown-menu library -->
