--- a/finance.html
+++ b/finance.html
@@ -1,24 +1,32 @@
 <!DOCTYPE html>
-<html lang="en" id="top" class="no-js">
+<!-- Class "no-js" /"menu-no-js"  checks if JavaScript is enabled in the visitor's browser. The "no-js" and "menu-no-js" classes are initially added to the html element to handle different styles or functionalities based on whether JavaScript is enabled in the user's browser. -->
+<html lang="en" id="top" class="no-js menu-no-js">
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-
-
-  <title>StudentHub - Your All-in-One Student Organizer</title>
-  <meta name="description"
-    content="StudentHub is an all-in-one app that helps students manage their daily life, organize tasks, manage finances, and much more.">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>StudentHub - Your All-in-One Student Organizer</title>
+    <meta name="description"
+        content="StudentHub is an all-in-one app that helps students manage their daily life, organize tasks, handle finances, and enhance social integration, making it easier to connect and participate in community activities.">
 
   <link href="style.css" rel="stylesheet">
   <!-- <link href="css/style.css" rel="stylesheet"> -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
-  <!-- by Dirkje J vd Poel -- dropdown-menu library -->
-  <script>
-    document.documentElement.classList.remove('no-js');
-    document.documentElement.classList.add('js'); 
-  </script>
+
+<!-- This script checks if JavaScript is enabled in the user's browser. 
+    If it is, it removes the "menu-no-js" class and adds the "js" class to the html element. 
+    This is used to handle different styles or functionalities for the menu button.  -->
+    <script>
+        document.documentElement.classList.remove('menu-no-js');
+        document.documentElement.classList.add('js');
+    </script>
+    
+
+    <!-- by Dirkje J vd Poel -- dropdown-menu library -->
+        <script>
+        document.documentElement.classList.remove('no-js');
+        document.documentElement.classList.add('js'); 
+    </script>
 
 </head>
 
