Updated footer on all pages, deleted finance.html

--- a/index.html
+++ b/index.html
@@ -97,14 +97,17 @@
 
 
     <main class="site-content" id="content">
-<!-- content intro = hovedbilde mennesker -->
+<!-- content intro = Main image on the landing page -->
         <section class="content-intro">
 
-            <img src="bilder/pixabay/studentHubPNG.png" alt="" srcset="bilder/pixabay/studentHubPNG.png 1x">
+            <img src="bilder/pixabay/studentHubPNG.png" alt="Illustration of people representing students" srcset="bilder/pixabay/studentHubPNG.png 1x">
+            <!-- <figcaption>Image by <a href="https://pixabay.com/users/nashvilleunited-3094135/" target="_blank">NashvilleUnited</a> from <a href="https://pixabay.com" target="_blank">Pixabay</a></figcaption> -->
             </figure>
             </div>
         </section>
 
+
+  
 
         <section class="infoboxen">
             <div class="inside">
