--- a/budget.html
+++ b/budget.html
@@ -203,16 +203,16 @@
 
   <footer class="site-footer">
     <div class="inside">
-      <nav class="footer-nav">
-        <ul>
-          <li><a href="#">Legal Notice</a></li>
-          <li><a href="#">Privacy Protection</a></li>
+        <nav class="footer-nav">
+            <ul>
+                <!-- <li><a href="#">Legal Notice</a></li> -->
+                <li><a href="#">Privacy Protection</a></li>
 
-          <li><a href="#top">Back to Top </a></li>
-        </ul>
-      </nav>
+                <li><a href="#top">Back to Top </a></li>
+            </ul>
+        </nav>
     </div>
-  </footer>
+  </footer> 
   <script src="budget_script.js"></script> 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   
