--- a/community.html
+++ b/community.html
@@ -169,18 +169,18 @@
 
 
 
-    <footer class="site-footer"> 
-      <div class="inside">
-        <nav class="footer-nav">
+<footer class="site-footer">
+  <div class="inside">
+      <nav class="footer-nav">
           <ul>
-            <li><a href="#">Legal Notice</a></li>
-            <li><a href="#">Privacy Protection</a></li>
-           
-            <li><a href="#top">Back to Top </a></li>
+              <!-- <li><a href="#">Legal Notice</a></li> -->
+              <li><a href="#">Privacy Protection</a></li>
+
+              <li><a href="#top">Back to Top </a></li>
           </ul>
-        </nav>
-      </div>
-    </footer> 
+      </nav>
+  </div>
+</footer>
 </body>
   
 </html>
