--- a/tasks.html
+++ b/tasks.html
@@ -336,18 +336,18 @@
             <button class="toggle-archive-btn" onclick="toggleArchive()">Toggle Archive</button>
         </div>
     </main>
-    <footer class="site-footer"> 
+    <footer class="site-footer">
         <div class="inside">
-          <nav class="footer-nav">
-            <ul>
-              <li><a href="#">Legal Notice</a></li>
-              <li><a href="#">Privacy Protection</a></li>
-             
-              <li><a href="#top">Back to Top </a></li>
-            </ul>
-          </nav>
+            <nav class="footer-nav">
+                <ul>
+                    <!-- <li><a href="#">Legal Notice</a></li> -->
+                    <li><a href="#">Privacy Protection</a></li>
+
+                    <li><a href="#top">Back to Top </a></li>
+                </ul>
+            </nav>
         </div>
-      </footer> 
+      </footer>
       <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
       <script>
           // Function to add a new task
