endret css til login

--- a/community.html
+++ b/community.html
@@ -27,6 +27,7 @@
  
 
     <link href="css/style.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
     <!-- <link href="style.css" rel="stylesheet"> -->
     
 
@@ -164,7 +165,7 @@
   
     </section>
     <div id="confirmation-message" style="display: none;"></div>
-</main>
+
 
 
 
