--- a/login.html
+++ b/login.html
@@ -5,6 +5,8 @@
     <title>Registration</title>
     <!-- <link href="css/style.css" rel="stylesheet"> -->
     <link href="style.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
+    <link href="css/auth.css" rel="stylesheet">
     <link href="auth.css" rel="stylesheet">
     
 </head>
