--- a/community.html
+++ b/community.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<!-- Class "no-js" /"menu-no-js"  checks if JavaScript is enabled in the visitor's browser. The "no-js" and "menu-no-js" classes are initially added to the html element to handle different styles or functionalities based on whether JavaScript is enabled in the user's browser. -->
+<!-- /*Author: Abdiqani */ -->
+
 <html lang="en" id="top" class="no-js menu-no-js">
 
 <head>
